SERVER-54891 Set read source before AutoGetCollectionForRead so we don't abandon a snapshot setup by the AutoColl.